write queries for getting types + descriptors, overall time series

--- a/wrangling.ipynb
+++ b/wrangling.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 0. Imports and Setup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -10,6 +17,360 @@
     "from sodapy import Socrata\n",
     "from dotenv import load_dotenv\n",
     "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_dotenv()\n",
+    "app_token = os.getenv(\"APP_TOKEN\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "socrata_domain = 'data.cityofnewyork.us'\n",
+    "socrata_dataset_identifier = 'erm2-nwe9'\n",
+    "\n",
+    "client = Socrata(\n",
+    "    socrata_domain,\n",
+    "    app_token=app_token,\n",
+    "    timeout=1000\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. Get A List of Complaint Types To Track"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape of data: (2529, 3)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>complaint_type</th>\n",
+       "      <th>descriptor</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Noise - Residential</td>\n",
+       "      <td>Loud Music/Party</td>\n",
+       "      <td>2186708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>HEAT/HOT WATER</td>\n",
+       "      <td>ENTIRE BUILDING</td>\n",
+       "      <td>1422046</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Blocked Driveway</td>\n",
+       "      <td>No Access</td>\n",
+       "      <td>1148829</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Request Large Bulky Item Collection</td>\n",
+       "      <td>Request Large Bulky Item Collection</td>\n",
+       "      <td>1073753</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Noise - Street/Sidewalk</td>\n",
+       "      <td>Loud Music/Party</td>\n",
+       "      <td>915639</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>HEATING</td>\n",
+       "      <td>HEAT</td>\n",
+       "      <td>868960</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Noise - Residential</td>\n",
+       "      <td>Banging/Pounding</td>\n",
+       "      <td>857874</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Street Light Condition</td>\n",
+       "      <td>Street Light Out</td>\n",
+       "      <td>834121</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>HEAT/HOT WATER</td>\n",
+       "      <td>APARTMENT ONLY</td>\n",
+       "      <td>756633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Street Condition</td>\n",
+       "      <td>Pothole</td>\n",
+       "      <td>752024</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        complaint_type                           descriptor  \\\n",
+       "0                  Noise - Residential                     Loud Music/Party   \n",
+       "1                       HEAT/HOT WATER                      ENTIRE BUILDING   \n",
+       "2                     Blocked Driveway                            No Access   \n",
+       "3  Request Large Bulky Item Collection  Request Large Bulky Item Collection   \n",
+       "4              Noise - Street/Sidewalk                     Loud Music/Party   \n",
+       "5                              HEATING                                 HEAT   \n",
+       "6                  Noise - Residential                     Banging/Pounding   \n",
+       "7               Street Light Condition                     Street Light Out   \n",
+       "8                       HEAT/HOT WATER                       APARTMENT ONLY   \n",
+       "9                     Street Condition                              Pothole   \n",
+       "\n",
+       "     count  \n",
+       "0  2186708  \n",
+       "1  1422046  \n",
+       "2  1148829  \n",
+       "3  1073753  \n",
+       "4   915639  \n",
+       "5   868960  \n",
+       "6   857874  \n",
+       "7   834121  \n",
+       "8   756633  \n",
+       "9   752024  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = \"\"\"\n",
+    "SELECT \n",
+    "    complaint_type,\n",
+    "    descriptor, \n",
+    "    count(unique_key) AS count\n",
+    "GROUP BY \n",
+    "    complaint_type, descriptor\n",
+    "ORDER BY \n",
+    "    count DESC\n",
+    "LIMIT \n",
+    "    3000\n",
+    "\"\"\"\n",
+    "\n",
+    "results = client.get(\n",
+    "    socrata_dataset_identifier,\n",
+    "    query=query\n",
+    ")\n",
+    "client.close()\n",
+    "\n",
+    "type_descriptor_df = pd.DataFrame(results)\n",
+    "\n",
+    "print('shape of data: {}'.format(type_descriptor_df.shape))\n",
+    "type_descriptor_df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type_descriptor_df.to_csv('types_descriptors.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Get Timeseries Of Overall Complaints"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape of data: (5177, 2)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>day</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024-03-04T00:00:00.000</td>\n",
+       "      <td>291</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024-03-03T00:00:00.000</td>\n",
+       "      <td>8252</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-03-02T00:00:00.000</td>\n",
+       "      <td>6991</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024-03-01T00:00:00.000</td>\n",
+       "      <td>8910</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2024-02-29T00:00:00.000</td>\n",
+       "      <td>8994</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2024-02-28T00:00:00.000</td>\n",
+       "      <td>8434</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2024-02-27T00:00:00.000</td>\n",
+       "      <td>8855</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2024-02-26T00:00:00.000</td>\n",
+       "      <td>8989</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2024-02-25T00:00:00.000</td>\n",
+       "      <td>7215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2024-02-24T00:00:00.000</td>\n",
+       "      <td>7091</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       day count\n",
+       "0  2024-03-04T00:00:00.000   291\n",
+       "1  2024-03-03T00:00:00.000  8252\n",
+       "2  2024-03-02T00:00:00.000  6991\n",
+       "3  2024-03-01T00:00:00.000  8910\n",
+       "4  2024-02-29T00:00:00.000  8994\n",
+       "5  2024-02-28T00:00:00.000  8434\n",
+       "6  2024-02-27T00:00:00.000  8855\n",
+       "7  2024-02-26T00:00:00.000  8989\n",
+       "8  2024-02-25T00:00:00.000  7215\n",
+       "9  2024-02-24T00:00:00.000  7091"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = \"\"\"\n",
+    "SELECT \n",
+    "    date_trunc_ymd(created_date) AS day, \n",
+    "    count(unique_key) AS count\n",
+    "GROUP BY \n",
+    "    day\n",
+    "ORDER BY \n",
+    "    day DESC\n",
+    "LIMIT \n",
+    "    10000\n",
+    "\"\"\"\n",
+    "\n",
+    "results = client.get(\n",
+    "    socrata_dataset_identifier,\n",
+    "    query=query\n",
+    ")\n",
+    "client.close()\n",
+    "\n",
+    "overall_df = pd.DataFrame(results)\n",
+    "\n",
+    "print('shape of data: {}'.format(overall_df.shape))\n",
+    "overall_df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "overall_df.to_csv('overall_ts.csv', index=False)"
    ]
   }
  ],
