--- a/wrangling.ipynb
+++ b/wrangling.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,6 +572,465 @@
    ],
    "source": [
     "queries[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. What's up with Noise?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape of data: (6488320, 35)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>unique_key</th>\n",
+       "      <th>created_date</th>\n",
+       "      <th>agency</th>\n",
+       "      <th>agency_name</th>\n",
+       "      <th>complaint_type</th>\n",
+       "      <th>descriptor</th>\n",
+       "      <th>location_type</th>\n",
+       "      <th>incident_zip</th>\n",
+       "      <th>incident_address</th>\n",
+       "      <th>street_name</th>\n",
+       "      <th>...</th>\n",
+       "      <th>park_facility_name</th>\n",
+       "      <th>park_borough</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>location</th>\n",
+       "      <th>closed_date</th>\n",
+       "      <th>resolution_description</th>\n",
+       "      <th>vehicle_type</th>\n",
+       "      <th>facility_type</th>\n",
+       "      <th>due_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>60485935</td>\n",
+       "      <td>2024-03-05T01:19:56.000</td>\n",
+       "      <td>NYPD</td>\n",
+       "      <td>New York City Police Department</td>\n",
+       "      <td>Noise - Residential</td>\n",
+       "      <td>Loud Talking</td>\n",
+       "      <td>Residential Building/House</td>\n",
+       "      <td>11232</td>\n",
+       "      <td>845 43 STREET</td>\n",
+       "      <td>43 STREET</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Unspecified</td>\n",
+       "      <td>BROOKLYN</td>\n",
+       "      <td>40.64442837225419</td>\n",
+       "      <td>-73.99860546549749</td>\n",
+       "      <td>{'latitude': '40.64442837225419', 'longitude':...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>60488419</td>\n",
+       "      <td>2024-03-05T01:19:43.000</td>\n",
+       "      <td>NYPD</td>\n",
+       "      <td>New York City Police Department</td>\n",
+       "      <td>Noise - Residential</td>\n",
+       "      <td>Banging/Pounding</td>\n",
+       "      <td>Residential Building/House</td>\n",
+       "      <td>11225</td>\n",
+       "      <td>415 LEFFERTS AVENUE</td>\n",
+       "      <td>LEFFERTS AVENUE</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Unspecified</td>\n",
+       "      <td>BROOKLYN</td>\n",
+       "      <td>40.66257854139589</td>\n",
+       "      <td>-73.94732487429349</td>\n",
+       "      <td>{'latitude': '40.66257854139589', 'longitude':...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>60488424</td>\n",
+       "      <td>2024-03-05T01:19:41.000</td>\n",
+       "      <td>NYPD</td>\n",
+       "      <td>New York City Police Department</td>\n",
+       "      <td>Noise - Residential</td>\n",
+       "      <td>Loud Music/Party</td>\n",
+       "      <td>Residential Building/House</td>\n",
+       "      <td>10032</td>\n",
+       "      <td>1993 AMSTERDAM AVENUE</td>\n",
+       "      <td>AMSTERDAM AVENUE</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Unspecified</td>\n",
+       "      <td>MANHATTAN</td>\n",
+       "      <td>40.833869848431014</td>\n",
+       "      <td>-73.94128446046544</td>\n",
+       "      <td>{'latitude': '40.833869848431014', 'longitude'...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>60486598</td>\n",
+       "      <td>2024-03-05T01:16:33.000</td>\n",
+       "      <td>NYPD</td>\n",
+       "      <td>New York City Police Department</td>\n",
+       "      <td>Noise - Residential</td>\n",
+       "      <td>Loud Music/Party</td>\n",
+       "      <td>Residential Building/House</td>\n",
+       "      <td>11221</td>\n",
+       "      <td>150 MALCOM X BOULEVARD</td>\n",
+       "      <td>MALCOM X BOULEVARD</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Unspecified</td>\n",
+       "      <td>BROOKLYN</td>\n",
+       "      <td>40.688334599490894</td>\n",
+       "      <td>-73.93014442097454</td>\n",
+       "      <td>{'latitude': '40.688334599490894', 'longitude'...</td>\n",
+       "      <td>2024-03-05T01:21:59.000</td>\n",
+       "      <td>The Police Department responded to the complai...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>60487853</td>\n",
+       "      <td>2024-03-05T01:15:43.000</td>\n",
+       "      <td>NYPD</td>\n",
+       "      <td>New York City Police Department</td>\n",
+       "      <td>Noise - Residential</td>\n",
+       "      <td>Loud Music/Party</td>\n",
+       "      <td>Residential Building/House</td>\n",
+       "      <td>10469</td>\n",
+       "      <td>2938 PEARSALL AVENUE</td>\n",
+       "      <td>PEARSALL AVENUE</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Unspecified</td>\n",
+       "      <td>BRONX</td>\n",
+       "      <td>40.8683729521505</td>\n",
+       "      <td>-73.85184778085492</td>\n",
+       "      <td>{'latitude': '40.8683729521505', 'longitude': ...</td>\n",
+       "      <td>2024-03-05T01:20:08.000</td>\n",
+       "      <td>The Police Department responded to the complai...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>60485932</td>\n",
+       "      <td>2024-03-05T01:13:05.000</td>\n",
+       "      <td>NYPD</td>\n",
+       "      <td>New York City Police Department</td>\n",
+       "      <td>Noise - Residential</td>\n",
+       "      <td>Loud Music/Party</td>\n",
+       "      <td>Residential Building/House</td>\n",
+       "      <td>10469</td>\n",
+       "      <td>2446 PEARSALL AVENUE</td>\n",
+       "      <td>PEARSALL AVENUE</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Unspecified</td>\n",
+       "      <td>BRONX</td>\n",
+       "      <td>40.862225072221605</td>\n",
+       "      <td>-73.85204223937656</td>\n",
+       "      <td>{'latitude': '40.862225072221605', 'longitude'...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>60487184</td>\n",
+       "      <td>2024-03-05T01:13:02.000</td>\n",
+       "      <td>NYPD</td>\n",
+       "      <td>New York City Police Department</td>\n",
+       "      <td>Noise - Residential</td>\n",
+       "      <td>Banging/Pounding</td>\n",
+       "      <td>Residential Building/House</td>\n",
+       "      <td>11355</td>\n",
+       "      <td>42-40 BOWNE STREET</td>\n",
+       "      <td>BOWNE STREET</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Unspecified</td>\n",
+       "      <td>QUEENS</td>\n",
+       "      <td>40.75630075802223</td>\n",
+       "      <td>-73.82119606250367</td>\n",
+       "      <td>{'latitude': '40.75630075802223', 'longitude':...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>60489623</td>\n",
+       "      <td>2024-03-05T01:13:01.000</td>\n",
+       "      <td>NYPD</td>\n",
+       "      <td>New York City Police Department</td>\n",
+       "      <td>Noise - Street/Sidewalk</td>\n",
+       "      <td>Loud Music/Party</td>\n",
+       "      <td>Street/Sidewalk</td>\n",
+       "      <td>10035</td>\n",
+       "      <td>408 EAST  117 STREET</td>\n",
+       "      <td>EAST  117 STREET</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Unspecified</td>\n",
+       "      <td>MANHATTAN</td>\n",
+       "      <td>40.796477578469414</td>\n",
+       "      <td>-73.93445163799235</td>\n",
+       "      <td>{'latitude': '40.796477578469414', 'longitude'...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>60490890</td>\n",
+       "      <td>2024-03-05T01:13:01.000</td>\n",
+       "      <td>NYPD</td>\n",
+       "      <td>New York City Police Department</td>\n",
+       "      <td>Noise - Street/Sidewalk</td>\n",
+       "      <td>Loud Music/Party</td>\n",
+       "      <td>Street/Sidewalk</td>\n",
+       "      <td>10035</td>\n",
+       "      <td>408 EAST  117 STREET</td>\n",
+       "      <td>EAST  117 STREET</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Unspecified</td>\n",
+       "      <td>MANHATTAN</td>\n",
+       "      <td>40.796477578469414</td>\n",
+       "      <td>-73.93445163799235</td>\n",
+       "      <td>{'latitude': '40.796477578469414', 'longitude'...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>60490887</td>\n",
+       "      <td>2024-03-05T01:12:12.000</td>\n",
+       "      <td>NYPD</td>\n",
+       "      <td>New York City Police Department</td>\n",
+       "      <td>Noise - Residential</td>\n",
+       "      <td>Banging/Pounding</td>\n",
+       "      <td>Residential Building/House</td>\n",
+       "      <td>10455</td>\n",
+       "      <td>665 WESTCHESTER AVENUE</td>\n",
+       "      <td>WESTCHESTER AVENUE</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Unspecified</td>\n",
+       "      <td>BRONX</td>\n",
+       "      <td>40.81625731768569</td>\n",
+       "      <td>-73.9081385356089</td>\n",
+       "      <td>{'latitude': '40.81625731768569', 'longitude':...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10 rows × 35 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  unique_key             created_date agency                      agency_name  \\\n",
+       "0   60485935  2024-03-05T01:19:56.000   NYPD  New York City Police Department   \n",
+       "1   60488419  2024-03-05T01:19:43.000   NYPD  New York City Police Department   \n",
+       "2   60488424  2024-03-05T01:19:41.000   NYPD  New York City Police Department   \n",
+       "3   60486598  2024-03-05T01:16:33.000   NYPD  New York City Police Department   \n",
+       "4   60487853  2024-03-05T01:15:43.000   NYPD  New York City Police Department   \n",
+       "5   60485932  2024-03-05T01:13:05.000   NYPD  New York City Police Department   \n",
+       "6   60487184  2024-03-05T01:13:02.000   NYPD  New York City Police Department   \n",
+       "7   60489623  2024-03-05T01:13:01.000   NYPD  New York City Police Department   \n",
+       "8   60490890  2024-03-05T01:13:01.000   NYPD  New York City Police Department   \n",
+       "9   60490887  2024-03-05T01:12:12.000   NYPD  New York City Police Department   \n",
+       "\n",
+       "            complaint_type        descriptor               location_type  \\\n",
+       "0      Noise - Residential      Loud Talking  Residential Building/House   \n",
+       "1      Noise - Residential  Banging/Pounding  Residential Building/House   \n",
+       "2      Noise - Residential  Loud Music/Party  Residential Building/House   \n",
+       "3      Noise - Residential  Loud Music/Party  Residential Building/House   \n",
+       "4      Noise - Residential  Loud Music/Party  Residential Building/House   \n",
+       "5      Noise - Residential  Loud Music/Party  Residential Building/House   \n",
+       "6      Noise - Residential  Banging/Pounding  Residential Building/House   \n",
+       "7  Noise - Street/Sidewalk  Loud Music/Party             Street/Sidewalk   \n",
+       "8  Noise - Street/Sidewalk  Loud Music/Party             Street/Sidewalk   \n",
+       "9      Noise - Residential  Banging/Pounding  Residential Building/House   \n",
+       "\n",
+       "  incident_zip        incident_address         street_name  ...  \\\n",
+       "0        11232           845 43 STREET           43 STREET  ...   \n",
+       "1        11225     415 LEFFERTS AVENUE     LEFFERTS AVENUE  ...   \n",
+       "2        10032   1993 AMSTERDAM AVENUE    AMSTERDAM AVENUE  ...   \n",
+       "3        11221  150 MALCOM X BOULEVARD  MALCOM X BOULEVARD  ...   \n",
+       "4        10469    2938 PEARSALL AVENUE     PEARSALL AVENUE  ...   \n",
+       "5        10469    2446 PEARSALL AVENUE     PEARSALL AVENUE  ...   \n",
+       "6        11355      42-40 BOWNE STREET        BOWNE STREET  ...   \n",
+       "7        10035    408 EAST  117 STREET    EAST  117 STREET  ...   \n",
+       "8        10035    408 EAST  117 STREET    EAST  117 STREET  ...   \n",
+       "9        10455  665 WESTCHESTER AVENUE  WESTCHESTER AVENUE  ...   \n",
+       "\n",
+       "  park_facility_name park_borough            latitude           longitude  \\\n",
+       "0        Unspecified     BROOKLYN   40.64442837225419  -73.99860546549749   \n",
+       "1        Unspecified     BROOKLYN   40.66257854139589  -73.94732487429349   \n",
+       "2        Unspecified    MANHATTAN  40.833869848431014  -73.94128446046544   \n",
+       "3        Unspecified     BROOKLYN  40.688334599490894  -73.93014442097454   \n",
+       "4        Unspecified        BRONX    40.8683729521505  -73.85184778085492   \n",
+       "5        Unspecified        BRONX  40.862225072221605  -73.85204223937656   \n",
+       "6        Unspecified       QUEENS   40.75630075802223  -73.82119606250367   \n",
+       "7        Unspecified    MANHATTAN  40.796477578469414  -73.93445163799235   \n",
+       "8        Unspecified    MANHATTAN  40.796477578469414  -73.93445163799235   \n",
+       "9        Unspecified        BRONX   40.81625731768569   -73.9081385356089   \n",
+       "\n",
+       "                                            location              closed_date  \\\n",
+       "0  {'latitude': '40.64442837225419', 'longitude':...                      NaN   \n",
+       "1  {'latitude': '40.66257854139589', 'longitude':...                      NaN   \n",
+       "2  {'latitude': '40.833869848431014', 'longitude'...                      NaN   \n",
+       "3  {'latitude': '40.688334599490894', 'longitude'...  2024-03-05T01:21:59.000   \n",
+       "4  {'latitude': '40.8683729521505', 'longitude': ...  2024-03-05T01:20:08.000   \n",
+       "5  {'latitude': '40.862225072221605', 'longitude'...                      NaN   \n",
+       "6  {'latitude': '40.75630075802223', 'longitude':...                      NaN   \n",
+       "7  {'latitude': '40.796477578469414', 'longitude'...                      NaN   \n",
+       "8  {'latitude': '40.796477578469414', 'longitude'...                      NaN   \n",
+       "9  {'latitude': '40.81625731768569', 'longitude':...                      NaN   \n",
+       "\n",
+       "                              resolution_description vehicle_type  \\\n",
+       "0                                                NaN          NaN   \n",
+       "1                                                NaN          NaN   \n",
+       "2                                                NaN          NaN   \n",
+       "3  The Police Department responded to the complai...          NaN   \n",
+       "4  The Police Department responded to the complai...          NaN   \n",
+       "5                                                NaN          NaN   \n",
+       "6                                                NaN          NaN   \n",
+       "7                                                NaN          NaN   \n",
+       "8                                                NaN          NaN   \n",
+       "9                                                NaN          NaN   \n",
+       "\n",
+       "  facility_type due_date  \n",
+       "0           NaN      NaN  \n",
+       "1           NaN      NaN  \n",
+       "2           NaN      NaN  \n",
+       "3           NaN      NaN  \n",
+       "4           NaN      NaN  \n",
+       "5           NaN      NaN  \n",
+       "6           NaN      NaN  \n",
+       "7           NaN      NaN  \n",
+       "8           NaN      NaN  \n",
+       "9           NaN      NaN  \n",
+       "\n",
+       "[10 rows x 35 columns]"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = \"\"\"\n",
+    "SELECT \n",
+    "    *\n",
+    "WHERE\n",
+    "    LOWER(complaint_type) LIKE '%noise%'\n",
+    "LIMIT \n",
+    "    20000000\n",
+    "\"\"\"\n",
+    "\n",
+    "results = client.get(\n",
+    "    socrata_dataset_identifier,\n",
+    "    query=query\n",
+    ")\n",
+    "client.close()\n",
+    "\n",
+    "noise_df = pd.DataFrame(results)\n",
+    "\n",
+    "print('shape of data: {}'.format(noise_df.shape))\n",
+    "noise_df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "noise_df.to_csv('noise_complaints.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "open_data_channel_type\n",
+       "ONLINE     2892902\n",
+       "PHONE      2065470\n",
+       "MOBILE     1440512\n",
+       "UNKNOWN      89415\n",
+       "OTHER           21\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "noise_df['open_data_channel_type'].value_counts()"
    ]
   }
  ],
